<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">快递员助手</string>
    <string name="app_id">5270cddf</string>
    
    
    <string name="preference_key_iat_engine">iat_engine</string>
    <string name="preference_default_iat_rate">rate16k</string>
    <string name="preference_key_iat_rate">iat_rate</string>
    <string name="preference_default_iat_engine">sms</string>
    <string name="preference_dialog_title_iat_engine">选择听写引擎</string>
	<string name="preference_key_poi_province">poi_province</string>
	<string name="preference_title_poi_province">地图搜索省份</string>
    <string name="preference_default_poi_province">全选</string>
    <string name="preference_default_poi_city">全选</string>
    <string name="preference_key_poi_city">poi_city</string>
    <string name="preference_title_iat_rate">录音采样率</string>
    <string name="preference_title_iat_engine">听写引擎</string>
    
    <string name="action_settings">设置</string>
    <string name="action_help">帮助</string>
    <string name="main_title">快递员助手</string>
    <string name="welcome_content">快递员助手</string>
    <string name="send_buttom">发送</string>
    <!-- help -->
    <string name="title_activity_help">帮助</string>
    <string name="how_to_use">使用方法：</string>
    <string name="help_world">此应用程序能够帮助快递员利用短信或电话的方式快速地通知客户收取包裹：快递员只需要对着麦克风说出相应的手机号码，程序即可通过语音识别技术将号码显示在屏幕上，并向该号码打电话或者发送预先设定的短信模板。</string>
    <string name="help_about">关于：</string>
    <string name="author_design">设计：小Y_King</string>
    <string name="author_dev">开发：wenhuix</string>
    <string name="contactus">联系我们：xiangwenhui@gmail.com</string>
    <string name="version">版本：1.0.0</string>
    <string name="technical_support">语音识别技术由科大讯飞语音云提供</string>
    
    <string-array name="sms_template">
        <item>亲爱的客户，快递放在物业啦，麻烦有空像一只小鹿一样欢快地跑过去拿一下。</item>
        <item>亲爱的客户，快递放在物业啦，麻烦你像一只小蜗牛一样背着阳光优哉游哉好温暖地过去拿一下。</item>
        <item>主人，我是您的包小裹，我坐飞机，又是坐火车，紧接着又被快递师傅用电动车拉到科大东门，请在12点到12点20分来救我！我在等你！</item>
		<item>你好，亲！有你的快递。这里是中科大，中午，温度不冷不热，我在西区东门，正在为人民币服务……</item>
    </string-array>

    <string-array name="express_company">
        <item>汇通快递</item>
        <item>圆通快递</item>
        <item>申通快递</item>
        <item>中通快递</item>
        <item>韵达快递</item>
        <item>顺丰快递</item>
    </string-array>
    
    <string-array name="menu">
        <item>编辑</item>
        <item>删除</item>
    </string-array>
   
</resources>
