<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gray3"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/style_topmenu_bg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/topmenu_height" >

        <TextView
            style="@style/style_topmenu_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="关于我们" />

        <Button
            android:id="@+id/aboutus_btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_action_previous_item" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tv_how_to_use"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use"
            android:textColor="@drawable/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_help_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_world"
            android:textColor="@drawable/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/help_about"
            android:textColor="@drawable/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_autor_design"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_design"
            android:textColor="@drawable/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_author_dev"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_dev"
            android:textColor="@drawable/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@drawable/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_contact_us"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactus"
            android:textColor="@drawable/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/technical_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technical_support"
            android:textColor="@drawable/black"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>